//Added details for some activities

--- a/app/src/main/res/layout/fragement_reset_password.xml
+++ b/app/src/main/res/layout/fragement_reset_password.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    tools:context=".view.fragments.SliderFragment">
+    tools:context=".view.fragments.splashCycle.SliderFragment">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/login_background"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
@@ -22,7 +22,7 @@
         app:srcCompat="@drawable/login" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/login_image"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_marginStart="8dp"
@@ -39,7 +39,7 @@
 
 
     <EditText
-        android:id="@+id/login_number2"
+        android:id="@+id/reset_password_number_id"
         style="@style/EditText"
         android:layout_marginTop="32dp"
         android:hint="@string/mobile"
@@ -48,10 +48,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/login_image" />
 
+    <ImageView
+        style="@style/UserIcon"
+        android:src="@drawable/ic_phone"
+        app:layout_constraintBottom_toBottomOf="@+id/reset_password_number_id"
+        app:layout_constraintStart_toStartOf="@+id/reset_password_number_id"
+        app:layout_constraintTop_toTopOf="@+id/reset_password_number_id" />
     <Button
-        android:id="@+id/verification_code_send"
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -61,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.464"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_number2" />
+        app:layout_constraintTop_toBottomOf="@+id/reset_password_number_id" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
