--- a/app/src/main/res/layout/fragment_new_password.xml
+++ b/app/src/main/res/layout/fragment_new_password.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    tools:context=".view.fragments.SliderFragment">
+    tools:context=".view.fragments.splashCycle.SliderFragment">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/login_background"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
@@ -22,7 +22,7 @@
         app:srcCompat="@drawable/login" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/login_image"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_marginStart="8dp"
@@ -59,11 +59,11 @@
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/login_image" />
 
 
     <EditText
-        android:id="@+id/login_number2"
+        android:id="@+id/reset_password_number_id"
         style="@style/EditText"
         android:layout_marginTop="16dp"
         android:hint="@string/new_password_confirmation"
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
     <Button
-        android:id="@+id/verification_code_send"
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -85,7 +85,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.464"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_number2" />
+        app:layout_constraintTop_toBottomOf="@+id/reset_password_number_id" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
