--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.HomeFragment">
+    tools:context=".view.fragments.homeCycle.HomeFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/home_tab_layout"
@@ -17,7 +17,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         app:tabIndicatorHeight="3dp"
-        app:tabTextAppearance="@style/customfontstyle"
+        app:tabTextAppearance="@style/CustomFontStyle"
         app:tabIndicatorColor="@color/background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
