--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".view.fragments.SplashFragment">
+    tools:context=".view.fragments.splashCycle.SplashFragment">
 
 
     <ImageView
