--- a/app/src/main/res/layout/item_donation.xml
+++ b/app/src/main/res/layout/item_donation.xml
@@ -1,16 +1,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="2dp"
     android:background="@android:color/white"
     android:layout_height="wrap_content">
 
     <View
         android:id="@+id/view3"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/shape_rectangle_radius"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,58 +20,59 @@
     <ImageView
         android:id="@+id/imageView14"
         android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        android:layout_height="95dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shape_circle_dark" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/donation_blood_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sittella"
-        android:text="B+"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/blood"
+        android:gravity="center"
+        android:text="O+"
         android:textColor="@android:color/white"
-        android:textSize="70sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
         app:layout_constraintEnd_toEndOf="@+id/imageView14"
         app:layout_constraintStart_toStartOf="@+id/imageView14"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.63" />
+        app:layout_constraintTop_toTopOf="@+id/imageView14" />
 
     <TextView
-        android:id="@+id/donation_text1"
+        android:id="@+id/donation_patient_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
-        app:layout_constraintStart_toEndOf="@+id/imageView14"
+        app:layout_constraintEnd_toEndOf="@+id/view3"
+        app:layout_constraintStart_toStartOf="@+id/imageView14"
         app:layout_constraintTop_toTopOf="@+id/view3" />
 
     <TextView
-        android:id="@+id/donation_text2"
+        android:id="@+id/donation_hospital_name"
         style="@style/SmallTexts"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintEnd_toEndOf="@+id/donation_text1"
-        app:layout_constraintTop_toBottomOf="@+id/donation_text1" />
+        app:layout_constraintEnd_toEndOf="@+id/donation_patient_name"
+        app:layout_constraintStart_toStartOf="@+id/donation_patient_name"
+        app:layout_constraintTop_toBottomOf="@+id/donation_patient_name" />
 
     <TextView
-        android:id="@+id/donation_text3"
+        android:id="@+id/donation_city_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintEnd_toEndOf="@+id/donation_text2"
-        app:layout_constraintTop_toBottomOf="@+id/donation_text2" />
+        app:layout_constraintEnd_toEndOf="@+id/donation_hospital_name"
+        app:layout_constraintStart_toStartOf="@+id/donation_hospital_name"
+        app:layout_constraintTop_toBottomOf="@+id/donation_hospital_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
