--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -17,7 +17,7 @@
         android:title="@string/notification" />
     <item
         android:id="@+id/nav_more"
-        android:icon="@drawable/ic_more_horiz_black_24dp"
+        android:icon="@drawable/ic_more"
         android:title="@string/more" />
 
 </menu>
