--- a/app/src/main/res/layout/item_donation.xml
+++ b/app/src/main/res/layout/item_donation.xml
@@ -1,9 +1,9 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:padding="2dp"
     android:background="@android:color/white"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <View
         android:id="@+id/view3"
@@ -75,4 +75,3 @@
         app:layout_constraintTop_toBottomOf="@+id/donation_hospital_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
